--- a/styles.css
+++ b/styles.css
@@ -511,33 +511,34 @@ footer {
 
 .clock-number {
     position: absolute;
-    font-size: 1.5rem;
-    font-weight: 600;
+    font-size: 1.3rem;
+    font-weight: 500;
     color: var(--text-primary);
     z-index: 1;
 }
 
-/* 각 숫자 위치 정확히 조정 */
-.number-12 { top: 10px; left: 50%; transform: translateX(-50%); }
-.number-1 { top: 30px; right: 80px; }
-.number-2 { top: 80px; right: 30px; }
-.number-3 { top: 50%; right: 10px; transform: translateY(-50%); }
-.number-4 { bottom: 80px; right: 30px; }
-.number-5 { bottom: 30px; right: 80px; }
-.number-6 { bottom: 10px; left: 50%; transform: translateX(-50%); }
-.number-7 { bottom: 30px; left: 80px; }
-.number-8 { bottom: 80px; left: 30px; }
-.number-9 { top: 50%; left: 10px; transform: translateY(-50%); }
-.number-10 { top: 80px; left: 30px; }
-.number-11 { top: 30px; left: 80px; }
+/* 각 숫자 위치 정확히 조정 - 시계 원형 기준으로 위치 계산 */
+.number-12 { top: 15px; left: 50%; transform: translateX(-50%); }
+.number-1 { top: 32px; right: 68px; }
+.number-2 { top: 68px; right: 32px; }
+.number-3 { top: 50%; right: 15px; transform: translateY(-50%); }
+.number-4 { bottom: 68px; right: 32px; }
+.number-5 { bottom: 32px; right: 68px; }
+.number-6 { bottom: 15px; left: 50%; transform: translateX(-50%); }
+.number-7 { bottom: 32px; left: 68px; }
+.number-8 { bottom: 68px; left: 32px; }
+.number-9 { top: 50%; left: 15px; transform: translateY(-50%); }
+.number-10 { top: 68px; left: 32px; }
+.number-11 { top: 32px; left: 68px; }
 
 /* 시계 바늘 */
 .hour-hand, .minute-hand, .second-hand {
     position: absolute;
-    transform-origin: bottom center;
+    transform-origin: 50% 100%;
     bottom: 50%;
     left: 50%;
     z-index: 2;
+    margin-left: 0;
 }
 
 .hour-hand {
