--- a/styles.css
+++ b/styles.css
@@ -445,67 +445,6 @@ footer {
     overflow: hidden;
 }
 
-/* 시계 눈금 점으로 변경 */
-.marking {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    transform-origin: center;
-}
-
-.marking:before, .marking:after {
-    content: '';
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    background-color: var(--primary-color);
-    border-radius: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.marking:before {
-    top: 12px;
-}
-
-.marking:after {
-    bottom: 12px;
-}
-
-/* 추가 눈금점 - 모든 5분 단위 */
-.marking-dots {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-}
-
-.dot {
-    position: absolute;
-    width: 3px;
-    height: 3px;
-    background-color: var(--accent-light);
-    border-radius: 50%;
-    transform-origin: center;
-}
-
-/* 모든 5분 단위에 점 배치 (12개 추가적인 점) */
-.dot-1 { top: 30px; left: 50%; transform: translateX(-50%); }
-.dot-2 { top: 50px; right: 95px; }
-.dot-3 { top: 95px; right: 50px; }
-.dot-4 { right: 30px; top: 50%; transform: translateY(-50%); }
-.dot-5 { bottom: 95px; right: 50px; }
-.dot-6 { bottom: 50px; right: 95px; }
-.dot-7 { bottom: 30px; left: 50%; transform: translateX(-50%); }
-.dot-8 { bottom: 50px; left: 95px; }
-.dot-9 { bottom: 95px; left: 50px; }
-.dot-10 { left: 30px; top: 50%; transform: translateY(-50%); }
-.dot-11 { top: 95px; left: 50px; }
-.dot-12 { top: 50px; left: 95px; }
-
 /* 시계 숫자 */
 .clock-face::before {
     content: '';
@@ -527,26 +466,26 @@ footer {
     z-index: 1;
 }
 
-/* 극좌표 계산을 통한 정확한 숫자 위치 설정 */
-.number-12 { top: 20px; left: 50%; transform: translateX(-50%); }
-.number-1 { top: 36px; right: 84px; }
-.number-2 { top: 84px; right: 36px; }
-.number-3 { top: 50%; right: 20px; transform: translateY(-50%); }
-.number-4 { bottom: 84px; right: 36px; }
-.number-5 { bottom: 36px; right: 84px; }
-.number-6 { bottom: 20px; left: 50%; transform: translateX(-50%); }
-.number-7 { bottom: 36px; left: 84px; }
-.number-8 { bottom: 84px; left: 36px; }
-.number-9 { top: 50%; left: 20px; transform: translateY(-50%); }
-.number-10 { top: 84px; left: 36px; }
-.number-11 { top: 36px; left: 84px; }
+/* 각 숫자 위치 정확히 계산 */
+.number-12 { top: 12px; left: 50%; transform: translateX(-50%); }
+.number-1 { top: 32px; right: 92px; }
+.number-2 { top: 92px; right: 32px; }
+.number-3 { top: 50%; right: 12px; transform: translateY(-50%); }
+.number-4 { bottom: 92px; right: 32px; }
+.number-5 { bottom: 32px; right: 92px; }
+.number-6 { bottom: 12px; left: 50%; transform: translateX(-50%); }
+.number-7 { bottom: 32px; left: 92px; }
+.number-8 { bottom: 92px; left: 32px; }
+.number-9 { top: 50%; left: 12px; transform: translateY(-50%); }
+.number-10 { top: 92px; left: 32px; }
+.number-11 { top: 32px; left: 92px; }
 
 /* 시계 바늘 */
 .hour-hand, .minute-hand, .second-hand {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform-origin: left center;
+    transform-origin: 0 50%;
     z-index: 2;
 }
 
@@ -567,7 +506,7 @@ footer {
 }
 
 .second-hand {
-    width: 115px;
+    width: 110px;
     height: 2px;
     background-color: var(--secondary-color);
     border-radius: 1px;
