--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,8 @@ h3 {
     margin-bottom: 0.5rem;
     letter-spacing: 2px;
     font-family: 'Roboto Mono', monospace;
-    width: 10ch;
-    display: inline-block;
+    width: 100%;
+    display: block;
     text-align: center;
 }
 
