오전/오후 표시를 가로로 배치하도록 수정

--- a/styles.css
+++ b/styles.css
@@ -607,5 +607,6 @@ footer {
     color: #555;
     margin-right: 10px;
     position: relative;
-    top: -2.5rem;
+    top: 0;
+    align-self: center;
 } 
